# wincpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-package.ymk
examples/: test.cpp
include/: window_factory.hpp
include/core/: error.hpp  win.hpp
include/memory/: memory.hpp  pointer.hpp
include/modules/: section.hpp
include/patterns/: scanner.hpp
include/wincpp/: memory_factory.hpp  module_factory.hpp  process.hpp
include/wincpp/core/: error.hpp
include/wincpp/memory/: memory.hpp  pointer.hpp  protection.hpp  protection_operation.hpp  region.hpp
include/wincpp/modules/: export.hpp  module.hpp  object.hpp  section.hpp
include/wincpp/patterns/: pattern.hpp  scanner.hpp
include/wincpp/windows/: window.hpp
include/windows/: window.hpp
src/: CMakeLists.txt  memory_factory.cpp  module_factory.cpp  process.cpp  window_factory.cpp
src/core/: error.cpp  snapshot.cpp  win.cpp
src/core/errors/: win32.cpp
src/memory/: memory.cpp  pointer.cpp  protection.cpp  protection_operation.cpp  region.cpp
src/modules/: export.cpp  module.cpp  object.cpp  section.cpp
src/patterns/: pattern.cpp  scanner.cpp
src/windows/: window.cpp
wincpp/examples/: CMakeLists.txt  test.cpp
wincpp/include/: memory_factory.hpp  module_factory.hpp  process.hpp
wincpp/include/core/: snapshot.hpp
wincpp/include/core/errors/: win32.hpp
wincpp/include/memory/: memory.hpp  pointer.hpp  protection.hpp  protection_operation.hpp  region.hpp
wincpp/include/modules/: export.hpp  module.hpp  module_factory.hpp  module_list.hpp  object.hpp  section.hpp
wincpp/include/patterns/: pattern.hpp  scanner.hpp
wincpp/src/: CMakeLists.txt  memory_factory.cpp  module_factory.cpp  process.cpp
wincpp/src/core/: error.cpp  snapshot.cpp
wincpp/src/memory/: memory.cpp  pointer.cpp  protection.cpp  protection_operation.cpp  region.cpp
wincpp/src/modules/: export.cpp  module.cpp  module_factory.cpp  object.cpp  section.cpp
wincpp/src/patterns/: pattern.cpp  scanner.cpp
